Refactor user domain