@@ -3,28 +3,17 @@ package com.blankfactor.altair.user.rest;
 import static com.blankfactor.altair.config.SwaggerConfig.BEARER_KEY_SECURITY_SCHEME;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.blankfactor.altair.security.CustomUserDetails;
-import com.blankfactor.altair.user.domain.User;
-import com.blankfactor.altair.user.domain.UserDto;
 import com.blankfactor.altair.user.mapper.UserMapper;
 import com.blankfactor.altair.user.model.UserDTO;
 import com.blankfactor.altair.user.service.UserService;
 import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
-import jakarta.validation.Valid;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
-import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -42,7 +31,7 @@ public class UserResource {
 
     @Operation(security = {@SecurityRequirement(name = BEARER_KEY_SECURITY_SCHEME)})
     @GetMapping("/me")
-    public UserDto getCurrentUser(
+    public UserDTO getCurrentUser(
             @AuthenticationPrincipal
             CustomUserDetails currentUser) {
         return userMapper.toDto(userService.validateAndGetUserByUsername(currentUser.getUsername()));
@@ -50,25 +39,15 @@ public class UserResource {
 
     @Operation(security = {@SecurityRequirement(name = BEARER_KEY_SECURITY_SCHEME)})
     @GetMapping
-    public List<UserDto> getUsers() {
-        return userService.getUsers().stream().map(userMapper::toDto).collect(Collectors.toList());
+    public List<UserDTO> getUsers() {
+        return userService.getUsers().stream().map(userMapper::toDto).toList();
     }
 
     @Operation(security = {@SecurityRequirement(name = BEARER_KEY_SECURITY_SCHEME)})
     @GetMapping("/{username}")
-    public UserDto getUser(
+    public UserDTO getUser(
             @PathVariable
             String username) {
         return userMapper.toDto(userService.validateAndGetUserByUsername(username));
-    }
-
-    @Operation(security = {@SecurityRequirement(name = BEARER_KEY_SECURITY_SCHEME)})
-    @DeleteMapping("/{username}")
-    public UserDto deleteUser(
-            @PathVariable
-            String username) {
-        User user = userService.validateAndGetUserByUsername(username);
-        userService.deleteUser(user);
-        return userMapper.toDto(user);
     }
 }
